--- a/src/app/home/components/sign-in-form/sign-in-form.component.html
+++ b/src/app/home/components/sign-in-form/sign-in-form.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="py-3 px-3">
         <img class="my-4" src="assets/logo1.png" alt="">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+
         <label for="inputEmail" class="sr-only" >Email address</label>
         <input type="email" id="inputEmail" class="form-control my-2" placeholder="Email address" required autofocus  formControlName="email">
         <div class="alert alert-danger" *ngIf="signInForm.get('email').hasError('email') || signInForm.get('email').hasError('required') && signInForm.touched">
@@ -15,6 +15,7 @@
         <div class="alert alert-danger" *ngIf="signInForm.touched && signInForm.get('password').hasError('required')">
             Password is required
         </div>
-        <button class="btn btn-lg btn-primary btn-block my-2" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-outline-primary btn-block my-2" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-outline-success btn-block my-2" type="submit" routerLink="/home/sign-up">Sign up</button>
     </div>
 </form>
