Created component task of home page in app user logged

--- a/src/app/user-logged/pages/home/home.component.html
+++ b/src/app/user-logged/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="row">
+    <div class="col"></div>
+    <div class="col-12 col-sm-4 my-5">
+        <app-task></app-task>
+    </div>
+    <div class="col"></div>
+</div>
