Created task form app

--- a/src/app/user-logged/pages/home/components/task/task.component.html
+++ b/src/app/user-logged/pages/home/components/task/task.component.html
@@ -23,7 +23,7 @@
     <div class="list-group list-group-flush">
 
         <div class="list-group-item" id="card-footer">
-            <small class="mr-3">Final date: january 2020 15:30:00</small>
+            <small class="">Final date: january 2020 15:30:00</small>
             <button class="close">
                 <span aria-hidden="true">
                     <svg  width="1em" height="0.8em" viewBox="0 0 16 16" class="bi bi-pencil-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
