--- a/src/app/user-logged/user-logged.component.html
+++ b/src/app/user-logged/user-logged.component.html
@@ -22,5 +22,12 @@
 </nav>
 
 <div class="container-fluid">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col text-center">
+      <app-create-task-form></app-create-task-form>
+    </div>
+    <div class="col"></div>
+  </div>
     <router-outlet></router-outlet>
 </div>
