--- a/src/app/user-logged/pages/home/home.component.html
+++ b/src/app/user-logged/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col"></div>
-    <div class="col-12 col-sm-4 my-5">
+    <div class="col-12 col-sm-4 my-5 text-center">
         <app-task></app-task>
     </div>
     <div class="col"></div>
