--- a/src/app/user-logged/components/create-task-form/create-task-form.component.html
+++ b/src/app/user-logged/components/create-task-form/create-task-form.component.html
@@ -6,11 +6,12 @@
 
   <div class="collapse mt-3" id="collapseForm">
     <div class="card card-body shadow">
-      <form class="p-2">
+
+      <form class="p-2" [formGroup]="taskForm" (ngSubmit)="onSubmit(taskForm.value)">
         <div class="form-group row">
-          <label for="type">Type:</label>
-          <select class="form-control col-12 col-sm-12" id="type" >
-              <option *ngFor="let c of categories" value="{{c.name}}">{{c.name}}</option>
+          <label for="category">Type:</label>
+          <select class="form-control col-12 col-sm-12" id="category" formControlName="category">
+              <option *ngFor="let c of categories" value="{{c.id}}">{{c.name}}</option>
           </select>
         </div>
         <div class="form-group row">
