--- a/src/app/user-logged/pages/home/components/task/task.component.html
+++ b/src/app/user-logged/pages/home/components/task/task.component.html
@@ -1,12 +1,12 @@
 <div class="card shadow my-3 text-center">
     <div class="list-group list-group-flush">
         <div class="list-group-item">
-            <small class="">Created at: january 2020 14:52:32</small>
+            <small class="">Created at: {{task.created_at | date: 'dd/MM/yyyy hh:mm'}}</small>
             <button class=" close">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
-        
+
     </div>
     <div class="card-body">
 
@@ -14,28 +14,35 @@
             <div class="col-2 text-right">
                 <input class="d-inline" type="checkbox" id="check">
             </div>
-            <div class="col-10 text-left">
-                <p class="card-text d-inline" id="content">Lavar a louca </p>
+            <div class="col-8 text-left">
+                <p class="card-text d-inline" id="content">{{task.content}}</p>
             </div>
+            <div class="col-2">
+                <button class="close">
+                    <span aria-hidden="true">
+                        <svg width="1em" height="0.8em" viewBox="0 0 16 16" class="bi bi-pencil-square"
+                            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                            <path fill-rule="evenodd"
+                                d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                        </svg>
+                    </span>
+                </button>
+            </div>
+
         </div>
-        
+
     </div>
-    <div class="list-group list-group-flush">
+    <div class="list-group list-group-flush" *ngIf=task.final_date>
 
         <div class="list-group-item" id="card-footer">
-            <small class="">Final date: january 2020 15:30:00</small>
-            <button class="close">
-                <span aria-hidden="true">
-                    <svg  width="1em" height="0.8em" viewBox="0 0 16 16" class="bi bi-pencil-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-                    </svg>
-                </span>
-            </button>
+            <small class="">Final date: {{task.final_date | date: 'dd/MM/yyyy hh:mm'}}</small>
+
         </div>
 
     </div>
-    <div class="alert-success">
-        <small >Task finished at: january 15:23:35</small>
+    <div class="alert-success" *ngIf="">
+        <small>Task finished at: january 15:23:35</small>
     </div>
 </div>
