--- a/src/app/user-logged/pages/home/components/task/task.component.html
+++ b/src/app/user-logged/pages/home/components/task/task.component.html
@@ -12,7 +12,7 @@
 
         <div class="row">
             <div class="col-2 text-right">
-                <input class="d-inline" type="checkbox" id="check">
+                <input #check class="d-inline" type="checkbox" id="check">
             </div>
             <div class="col-8 text-left">
                 <p class="card-text d-inline" id="content">{{task.content}}</p>
@@ -42,7 +42,7 @@
         </div>
 
     </div>
-    <div class="alert-success" *ngIf="">
-        <small>Task finished at: january 15:23:35</small>
+    <div class="alert-success" *ngIf="task.concluded_date">
+        <small>Task concluded at: {{task.concluded_date | date: 'dd/MM/yyyy hh:mm'}}</small>
     </div>
 </div>
