--- a/src/app/user-logged/pages/home/components/task/task.component.html
+++ b/src/app/user-logged/pages/home/components/task/task.component.html
@@ -12,7 +12,7 @@
 
         <div class="row">
             <div class="col-2 text-right">
-                <input #check class="d-inline" type="checkbox" id="check">
+                <input #check class="d-inline" type="checkbox" id="check" (click)="checkBox(check)">
             </div>
             <div class="col-8 text-left">
                 <p class="card-text d-inline" id="content">{{task.content}}</p>
