--- a/src/app/user-logged/pages/home/components/task/task.component.html
+++ b/src/app/user-logged/pages/home/components/task/task.component.html
@@ -2,7 +2,7 @@
     <div class="list-group list-group-flush">
         <div class="list-group-item">
             <small class="">Created at: {{task.created_at | date: 'dd/MM/yyyy hh:mm'}}</small>
-            <button class=" close">
+            <button class="close" (click)="deleteTask()">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
@@ -12,13 +12,13 @@
 
         <div class="row">
             <div class="col-2 text-right">
-                <input #check class="d-inline" type="checkbox" id="check" (click)="checkBox(check)">
+                <input #check class="d-inline" type="checkbox" id="check" (click)="concludeTask(check)">
             </div>
             <div class="col-8 text-left">
                 <p class="card-text d-inline" id="content">{{task.content}}</p>
             </div>
             <div class="col-2">
-                <button class="close">
+                <button class="close" >
                     <span aria-hidden="true">
                         <svg width="1em" height="0.8em" viewBox="0 0 16 16" class="bi bi-pencil-square"
                             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
