--- a/src/app/user-logged/pages/home/home.component.html
+++ b/src/app/user-logged/pages/home/home.component.html
@@ -1,7 +1,10 @@
 <div class="row">
     <div class="col"></div>
     <div class="col-12 col-sm-4 my-5 text-center">
-        <app-task *ngFor="let t of tasks" [task]=t></app-task>
+        <app-task *ngFor="let t of tasks" 
+            [task]=t
+            (deleted)="onDeleteTask($event)"
+        ></app-task>
     </div>
     <div class="col"></div>
 </div>
