--- a/src/app/user-logged/pages/home/home.component.html
+++ b/src/app/user-logged/pages/home/home.component.html
@@ -1,7 +1,10 @@
 <div class="row">
     <div class="col"></div>
     <div class="col text-center">
-        <app-create-task-form></app-create-task-form>
+        <app-create-task-form
+            (created)="onCreateTask($event)"
+        >
+        </app-create-task-form>
     </div>
     <div class="col"></div>
 </div>
