--- a/src/app/user-logged/pages/home/components/task/task.component.html
+++ b/src/app/user-logged/pages/home/components/task/task.component.html
@@ -1,4 +1,4 @@
-<div class="card shadow my-3 text-center">
+<div *ngIf="task" class="card shadow my-3 text-center">
     <div class="list-group list-group-flush">
         <div class="list-group-item">
             <small class="">Created at: {{task.created_at | date: 'dd/MM/yyyy hh:mm'}}</small>
@@ -8,8 +8,9 @@
         </div>
 
     </div>
-    <div class="card-body">
 
+
+    <div class="card-body">
         <div class="row">
             <div class="col-2 text-right">
                 <input #check class="d-inline" type="checkbox" id="check" (click)="concludeTask(check)">
@@ -18,7 +19,8 @@
                 <p class="card-text d-inline" id="content">{{task.content}}</p>
             </div>
             <div class="col-2">
-                <button class="close" >
+                <button class="close" data-toggle="modal" [attr.data-target]="'#modal'+task.id"
+                    (click)="getCategories()">
                     <span aria-hidden="true">
                         <svg width="1em" height="0.8em" viewBox="0 0 16 16" class="bi bi-pencil-square"
                             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -29,11 +31,48 @@
                         </svg>
                     </span>
                 </button>
+
+                <div class="modal fade" [attr.id]="'modal'+task.id" role="dialog" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form [formGroup]="taskForm">
+                                    <div class="form-group">
+                                        <label for="category">Type:</label>
+                                        <select class="form-control col-12 col-sm-12" id="category"
+                                            formControlName="category" *ngIf="categories">
+                                            <option *ngFor="let c of categories" value="{{c.id}}">{{c.name}}
+                                            </option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="message-text" class="col-form-label">Content: </label>
+                                        <textarea class="form-control"
+                                            formControlName="content">{{task.content}}</textarea>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
-
         </div>
-
     </div>
+
+
     <div class="list-group list-group-flush" *ngIf=task.final_date>
 
         <div class="list-group-item" id="card-footer">
