--- a/src/app/user-logged/pages/home/components/task/task.component.html
+++ b/src/app/user-logged/pages/home/components/task/task.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="task" class="card shadow my-3 text-center">
     <div class="list-group list-group-flush">
         <div class="list-group-item">
+            <i [class]="this.task.category.icon" id="icon"></i>
             <small class="">Created at: {{task.created_at | date: 'dd/MM/yyyy hh:mm'}}</small>
             <button class="close" (click)="deleteTask()">
                 <span aria-hidden="true">&times;</span>
