--- a/src/app/user-logged/pages/home/home.component.html
+++ b/src/app/user-logged/pages/home/home.component.html
@@ -11,7 +11,7 @@
 
 <div class="row">
     <div class="col"></div>
-    <div class="col-12 col-sm-4 my-5 text-center">
+    <div class="col-12 col-sm-8 col-md-6 col-lg-4 my-5 text-center">
         <div  *ngIf="tasks">
             <app-task *ngFor="let t of tasks" 
             [task]=t
