Created filter component and added style

--- a/src/app/user-logged/components/navbar/navbar.component.html
+++ b/src/app/user-logged/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" routerLink="./">Home</a>
             </li>
         </ul>
         <span class="navbar-text mr-4">
