--- a/src/app/user-logged/pages/home/components/create-task-form/create-task-form.component.html
+++ b/src/app/user-logged/pages/home/components/create-task-form/create-task-form.component.html
@@ -1,7 +1,7 @@
 <div class="mt-5">
   <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#collapseForm"
     aria-expanded="false" aria-controls="collapseForm">
-    New task
+    <i class="fa fa-plus"></i> New task
   </button>
 
   <div class="collapse mt-3" id="collapseForm">
