--- a/src/app/user-logged/pages/home/home.component.html
+++ b/src/app/user-logged/pages/home/home.component.html
@@ -1,5 +1,13 @@
 <div class="row">
     <div class="col"></div>
+    <div class="col-12 col-sm-4 text-center">
+        <app-filter-task></app-filter-task>
+      </div>
+      <div class="col"></div>
+</div>
+
+<div class="row">
+    <div class="col"></div>
     <div class="col text-center">
         <app-create-task-form
             (created)="onCreateTask($event)"
