Added style to small screens, created method getCategories in filter task component and added categories dinamicaly to filter

--- a/src/app/user-logged/pages/home/components/filter-task/filter-task.component.css
+++ b/src/app/user-logged/pages/home/components/filter-task/filter-task.component.css
@@ -7,6 +7,13 @@
     transition: height 1s;
 }
 
+@media screen and (max-width: 600px){
+    #filter{
+        width: 109.5%;
+        margin-left: -5%;
+    }
+}
+
 #filter:hover{
     height: 200px;
 }
