--- a/src/app/user-logged/pages/home/home.component.html
+++ b/src/app/user-logged/pages/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="row">
     <div class="col"></div>
     <div class="col-12 col-sm-4 text-center">
-        <app-filter-task></app-filter-task>
+        <app-filter-task
+            (filtered)="onFilterTask($event)"
+        ></app-filter-task>
       </div>
       <div class="col"></div>
 </div>
