Fixed responsivity of create task form component and animations of filter task component

--- a/src/app/user-logged/pages/home/components/filter-task/filter-task.component.css
+++ b/src/app/user-logged/pages/home/components/filter-task/filter-task.component.css
@@ -4,7 +4,8 @@
     margin-top: -2px;
     overflow: hidden;
     height: 40px;
-    transition: height 1s;
+    transition: height 600ms;
+    transition-delay: 300ms;
 }
 
 @media screen and (max-width: 600px){
