--- a/src/app/user-logged/pages/home/home.component.html
+++ b/src/app/user-logged/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col"></div>
-    <div class="col-12 col-sm-4 text-center">
+    <div class="col-12 col-sm-8 col-md-6 col-lg-4 text-center">
         <app-filter-task
             (filtered)="onFilterTask($event)"
         ></app-filter-task>
@@ -10,7 +10,7 @@
 
 <div class="row">
     <div class="col"></div>
-    <div class="col text-center">
+    <div class="col-12 col-sm-8 col-md-6 col-lg-4 text-center">
         <app-create-task-form
             (created)="onCreateTask($event)"
         >
